--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "ionic-clubhouse-spaces-ui",
   "version": "0.0.1",
   "private": true,
-  "proxy": "http://localhost:3000",
   "dependencies": {
     "@capacitor/app": "1.0.5",
     "@capacitor/core": "3.2.5",
@@ -26,6 +25,8 @@
     "http-proxy-middleware": "^3.0.0",
     "install": "^0.13.0",
     "ionicons": "^5.4.0",
+    "isexe": "^3.1.1",
+    "legacy": "^0.0.3",
     "npm": "^10.8.1",
     "pullstate": "^1.23.0",
     "react": "^17.0.1",
@@ -36,6 +37,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-slick": "^0.30.2",
+    "react-swipeable-views": "^0.14.0",
     "reselect": "^4.0.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^6.8.4",
